Added node trimming optimization